<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="activity_search">Поиск</string>
    <string name="activity_media">Медиатека</string>
    <string name="activity_settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_theme">Темная тема</string>
    <string name="settings_output">Поделиться приложением</string>
    <string name="settings_helper">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>

    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_address">madj0ng@yandex.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_data_uri">mailto:</string>

    <string name="sharing_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="sharing_type">text/plain</string>
    <string name="sharing_update">Обновить</string>

    <string name="url_offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="error_search_find">Ничего не нашлось</string>
    <string name="error_connect_find">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="error_favourites">Ваша медиатека пуста</string>
    <string name="error_find">Не удалось открыть приложение</string>
    <string name="error_album_find">Не удалось найти плейлист</string>

    <string name="history_title">Вы искали</string>
    <string name="history_clear_button">Очистить историю</string>

    <string name="player_track_time">Длительность</string>
    <string name="player_collection_name">Альбом</string>
    <string name="player_release_date">Год</string>
    <string name="player_primary_genre_name">Жанр</string>
    <string name="player_primary_country">Страна</string>
    <string name="player_primary_time">00:00</string>

    <string name="player_playlist_message">Плейлист «BeSt SoNg EvEr!» создан</string>

    <string name="media_title">Медиатека</string>
    <string name="media_playlist_new">Новый плейлист</string>
    <string name="media_tab_playlist">Плейлисты</string>
    <string name="media_tab_favourites">Избранные треки</string>

    <string name="playlist_item">треков</string>
    <string name="playlist_count_zero">0</string>

    <string name="playlistadd_title">Новый плейлист</string>
    <string name="playlistadd_create">Создать</string>
    <string name="playlistadd_name">Название*</string>
    <string name="playlistadd_description">Описание</string>
    <string name="playlistadd_dialog_title">Сохранить изменения?</string>
    <string name="playlistadd_dialog_cancel">Отмена</string>
    <string name="playlistadd_dialog_close">Завершить</string>
    <string name="playlistadd_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlistadd_create_success">Плейлист %1 создан</string>
    <string name="playlistadd_update_success">Плейлист %1 обновлен</string>
    <string name="playlistadd_bottom_sheet_title">Добавить в плейлист</string>
    <string name="playlistadd_add_track">Добавлено в плейлист %1</string>
    <string name="playlistadd_also_add_track">Трек уже добавлен в плейлист %1</string>

    <string name="playlistedit_title">Редактировать</string>
    <string name="playlistedit_save">Сохранить</string>

    <string name="album_time_unit">минут</string>
    <string name="album_count_unit">треков</string>
    <string name="album_menu_share">Поделиться</string>
    <string name="album_menu_edit">Редактировать информацию</string>
    <string name="album_menu_delete">Удалить плейлист</string>
    <string name="album_share_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="dialog_track_delete_title">Удалить трек</string>
    <string name="dialog_track_delete_ask">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="dialog_album_delete_title">Удалить плейлист</string>
    <string name="dialog_album_delete_ask">Хотите удалить плейлист "%1"?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
</resources>