<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainBackground">

    <LinearLayout style="@style/TitleLine">

        <TextView
            style="@style/MainTitleText"
            android:text="@string/main_title" />
    </LinearLayout>

    <LinearLayout style="@style/MainBodyLine">

        <Button
            android:id="@+id/search"
            style="@style/MainButton"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/activity_search"
            app:icon="@drawable/icon_search" />

        <Button
            android:id="@+id/media"
            style="@style/MainButton"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/activity_media"
            app:icon="@drawable/icon_media" />

        <Button
            android:id="@+id/settings"
            style="@style/MainButton"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/activity_settings"
            app:icon="@drawable/icon_settings" />
    </LinearLayout>
</LinearLayout>